--- a/src/css/main.css
+++ b/src/css/main.css
@@ -6,7 +6,7 @@ body {
   width: 50vh;
 }
 #timesliderFrame {
-  height: 15%;
+  height: 10vh;
 }
 #timesliderFrame .tick line {
   stroke: grey;
@@ -21,10 +21,37 @@ body {
 #timelineFrame {
   height: 30vh;
   overflow-y: scroll;
+  position: relative;
+}
+#boxFrame {
+  height: 15vh;
+  width: 100%;
+}
+.scrollbar-sunny-morning::-webkit-scrollbar-track {
+-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+background-color: #F5F5F5;
+border-radius: 10px;
+}
+
+.scrollbar-sunny-morning::-webkit-scrollbar {
+width: 12px;
+background-color: #F5F5F5;
+}
+
+.scrollbar-sunny-morning::-webkit-scrollbar-thumb {
+border-radius: 10px;
+-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+background-image: -webkit-linear-gradient(330deg, #f6d365 0%, #fda085 100%);
+background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
+}
+.thin::-webkit-scrollbar {
+width: 6px;
 }
 #scatterFrame {
   height: 45vh;
-  line-height: 0.5vh;
+}
+.nav-tabs {
+    line-height: 0.5vh;
 }
 #interface {
   height: 100vh;
@@ -40,6 +67,16 @@ div.tooltip {
   border: 0px;
   border-radius: 0.2rem;
   pointer-events: none;
+}
+div.configTooltip {
+  position: absolute;
+  text-align: center;
+  padding: 0.2rem;
+  font: 1rem sans-serif;
+  border: 0px;
+  border-radius: 0.2rem;
+  pointer-events: none;
+  z-index: 1000;
 }
 .annotation {
   font-size: small;
@@ -102,7 +139,10 @@ div.tooltip {
   border-color: #E2E6EA;
   border-width: 1px;
   border-radius: 0.2rem;
-
+  line-height: 1;
+}
+#selectedNodeList {
+  line-height: 1.5;
 }
 select {
   width: 100%;
@@ -112,4 +152,66 @@ select {
 option {
   width: 100%;
   text-align: center;
+}
+
+.pollSlider{
+  position:fixed;
+  height:100%;
+  background:white;
+  width:200px;
+  left:0px;
+  margin-left: -200px;
+  z-index: 100;
+}
+#pollSlider-button{
+  position:fixed;
+  width:1.8rem;
+  height:1.8rem;
+  left:0px;
+  top:45vh;
+  z-index:200;
+  text-align: center;
+  border-radius: 1rem;
+  border:gray solid 1px;
+  cursor: pointer;
+  background: white;
+}
+
+.lasso path {
+    stroke: rgb(80,80,80);
+    stroke-width:0.5px;
+}
+
+.lasso .drawn {
+    fill-opacity:.05 ;
+}
+
+.lasso .loop_close {
+    fill:none;
+    stroke-dasharray: 4,4;
+}
+
+.lasso .origin {
+    fill:#3399FF;
+    fill-opacity:.5;
+}
+
+.not_possible {
+    fill: rgb(200,200,200);
+}
+
+.possible {
+  stroke: red;
+}
+
+.selected {
+  stroke: red;
+}
+
+#radarDiv {
+  width: 100%;
+  height: 38vh;
+}
+.tab-pane {
+  height: 38vh;
 }
