--- a/src/css/main.css
+++ b/src/css/main.css
@@ -3,7 +3,7 @@ body {
 }
 #nodelinkFrame {
   height: 45vh;
-  width: 50vh;
+  width: 100%;
 }
 #timesliderFrame {
   height: 10vh;
@@ -18,12 +18,23 @@ body {
 #timesliderFrame .domain{
   stroke-width: 0.3vh;
 }
+#measureFrame {
+  height: 85vh;
+  /* overflow-y: scroll; */
+  position: relative;
+}
 #timelineFrame {
-  height: 30vh;
+  height: 55vh;
   overflow-y: scroll;
   position: relative;
 }
+#kdeFrame{
+}
 #boxFrame {
+  height: 15vh;
+  width: 100%;
+}
+#heatmapFrame {
   height: 15vh;
   width: 100%;
 }
@@ -164,6 +175,19 @@ option {
   z-index: 100;
 }
 #pollSlider-button{
+  position:fixed;
+  width:1.8rem;
+  height:1.8rem;
+  left:0px;
+  top:50vh;
+  z-index:200;
+  text-align: center;
+  border-radius: 1rem;
+  border:gray solid 1px;
+  cursor: pointer;
+  background: white;
+}
+#pollSlider-button-selection{
   position:fixed;
   width:1.8rem;
   height:1.8rem;
